7-9-2010: Fixed: Chart series curves prevent grabbing of the chart playback cursor
7-9-2010: Added reset for chart maximized/minimized and zoom settings
7-9-2010: Added domain tick labels in the charts
7-8-2010: Fixed: Horizontal zoom will be available on the bottom chart only, near the time axis, and vertical zoom buttons will be near the top of each chart
7-8-2010: Only show the domain axis labels for the bottom chart 
7-8-2010: Horizontal zoom is able to zoom in to 2.0 seconds
7-8-2010: Vertical zoom works as a scale factor, not as an addition term
7-8-2010: Made the y=0 grid line thicker and darker 
7-8-2010: Fixed: Ticks and labels on charts are intercepting events.
7-7-2010: Added a tick mark to the middle of horizontal sliders
6-29-2010: Charts expand to take up available space
6-25-2010: Added a new package for charts for moving-man
5-22-2010: Added an optional domain axis label
5-19-2010: Changed the default maximum time from 1000.0 sec to 20.0 sec, resolves #2361
12-15-2009: Provided 4 public getters and setters associated with the additional control panel swing and pswing components.
12-15-2009: Added a public getter for the close button so that client code can use its position for layout
10-27-2009: Made it so that aligned chart layout updates when zoom level changes for any chart.
10-27-2009: Fixed a bug that prevented listeners from being notified on zoom.
10-26-2009: Add back componentHierachyChanged to controlGraph.addControl
10-6-2009: Show exception if no time passed between data points
9-27-2009: Set chart to take up all vertical space by default, see #1782
9-22-2009: Made series clear specific to parent series, instead of clearing all series
9-21-2009: Update to Java 1.5
9-11-2009: Added ability to increase padding between series controls and slider, didn't change default behavior
9-11-2009: Added ability to center additional controls, only enabled for aligned layout, didn't change default behavior
9-4-2009: Added getter/setter for domain