@@ -1,3 +1,4 @@
+Added a double-triangle icon to the left of the vertical zoom buttons
 Fixed: Chart series curves prevent grabbing of the chart playback cursor
 Added a check box for enabling/disabling sound
 Added reset for chart maximized/minimized and zoom settings
